--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -12,8 +12,9 @@ section{
 	padding-top: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
+	padding-bottom: 10px;
 	margin-bottom: 30px; 
-	margin-right: 35px;
+	margin-right: 30px;
 }
 
 h3{
