--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -5,8 +5,8 @@
 
 section{
 	background-color: gray;
+	
 	position: relative;
-	width: 300px;
 	box-sizing: border-box;
 	border: 4px solid black;
 	padding-top: 10px;
@@ -16,20 +16,19 @@ section{
 	margin-bottom: 30px; 
 	margin-right: 30px;
 }
-
 h3{
 	background-color: maroon;
 	color: white;
-	width: 100px;
 	border: 2px solid black;
 	box-sizing: border-box;
-	position: absolute;
+	position:absolute;
 	top:0px;
-	left:194px;
+	right: 0px;
 	margin-top: 0px;
 	margin-bottom: 0px;
-	
+
 }
+
 .row{
 	width:100%;
 }
@@ -37,6 +36,7 @@ h3{
 	.col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,
 	.col-lg-7,.col-lg-8,.col-lg-9,.col-lg-10,.col-lg-11,.col-lg-12{
 		float: left;
+		
 	}
 	.col-lg-1{
 		width: 8.33%;
@@ -79,7 +79,8 @@ h3{
 @media(min-width: 768px) and (max-width: 991px){
 	.col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,
 	.col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12{
-		float: left;	}
+		float: left;
+			}
 	.col-md-1{
 		width: 8.33%;
 	}
@@ -122,6 +123,7 @@ h3{
 	.col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,
 	.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12{
 		float: left;
+		
 	}
 	.col-sm-1{
 		width: 8.33%;
@@ -160,3 +162,4 @@ h3{
 		width: 100%
 	}
 }
+
